python/network/cnp-python-hardening-policy-allow-only-port-110.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-python-hardening-policy-allow-only-port-110
  namespace: default                #change namespace
spec:
  description: "Python hardening rule to allow POP3 Fetching email via port 110"
  endpointSelector:
    matchLabels:
      app: python                   #change labels
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "110"
    - fromEndpoints:
        - {}
    - fromEntities:
        - cluster
