python/network/cnp-python-hardening-policy-allow-only-port-20.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-python-hardening-policy-allow-only-port-20
  namespace: default                #change namespace
spec:
  description: "Python hardening rule to allow FTP File transfers via port 20"
  endpointSelector:
    matchLabels:
      app: python                   #change labels
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "20"
    - fromEndpoints:
        - {}
    - fromEntities:
        - cluster
