python/network/cnp-python-hardening-policy-allow-only-port-25.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-python-hardening-policy-allow-only-port-25
  namespace: default                #change namespace
spec:
  description: "Python hardening rule to allow SMTP Sending email via port 25"
  endpointSelector:
    matchLabels:
      app: python                   #change labels
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "25"
    - fromEndpoints:
        - {}
    - fromEntities:
        - cluster
