python/network/cnp-python-hardening-policy-allow-only-port-80.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-python-hardening-policy-allow-only-port-80
  namespace: default                #change namespace
spec:
  description: "Python hardening rule to allow HTTP webpages via port 80"
  endpointSelector:
    matchLabels:
      app: python                   #change labels
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "80"
    - fromEndpoints:
        - {}
    - fromEntities:
        - cluster
